[update] added string backend

--- a/test/dune
+++ b/test/dune
@@ -1,6 +1,6 @@
-; (test
-;  (name test_parse_expr)
-;  (libraries parse.expressions alcotest))
+(test
+ (name test_parse_expr)
+ (libraries parse.expressions alcotest))
 
 (test
  (name test_parser_basic)
@@ -22,10 +22,10 @@
  (name test_parser_control)
  (libraries parse.parse alcotest))
 
-; (test
-;  (name test_parser_parsing)
-;  (libraries parse.parse alcotest))
+(test
+ (name test_parser_parsing)
+ (libraries parse.parse alcotest))
 
-; (test
-;  (name test_parser_combinators)
-;  (libraries parse.parse alcotest))
+(test
+ (name test_parser_combinators)
+ (libraries parse.parse alcotest))
